# tetra

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  book.toml  netlify.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  bug_report.md  config.yml  feature-change-request.md  feature-request.md  feature-request.yml
.github/workflows/: ci.yml
docs/: FAQ.md  README.md  SUMMARY.md  changelog.md  distributing.md  examples.md  faq.md  installation.md  showcase.md  web.md
docs/tutorial/: 01-creating-a-project.md  02-adding-the-paddles.md  03-adding-a-ball.md  README.md  getting-started.md  installation.md  loading-a-texture.md
examples/: README.md  animation.rs  animation_controller.rs  audio.rs  bunnymark.rs  camera.rs  canvas.rs  ecs.rs  error_handling.rs  events.rs  file_drop.rs  gamepad.rs  hello_world.rs  imgui_hello_world.rs  imgui_keyboard.rs  input.rs  instancing.rs  interpolation.rs  keyboard.rs  keyboard_animation.rs  mesh.rs  mouse.rs  nineslice.rs  scaling.rs  scissor.rs  shaders.rs  shapes.rs  stencil.rs  tetras.rs  text.rs  text_input.rs  text_perf.rs  texture.rs
examples/resources/: DejaVuSansMono.fnt  dejavu.fnt  disco.frag  greyscale.frag  instanced.vert
src/: audio.rs  context.rs  error.rs  experimental_imgui.rs  experimental_imgui_sdl2_support.rs  fs.rs  glm.rs  graphics.rs  input.rs  lib.rs  lifecycle.rs  math.rs  opengl.rs  platform.rs  spritebatch.rs  time.rs  util.rs  window.rs
src/graphics/: animation.rs  buffers.rs  camera.rs  canvas.rs  color.rs  drawable.rs  drawparams.rs  image_data.rs  mesh.rs  mod.rs  opengl.rs  rectangle.rs  scaling.rs  shader.rs  spritebatch.rs  text.rs  texture.rs  ui.rs
src/graphics/text/: bmfont.rs  cache.rs  packer.rs  vector.rs
src/input/: gamepad.rs  keyboard.rs  mouse.rs
src/platform/: audio_rodio.rs  device_gl.rs  native.rs  opengl.rs  sdl.rs  web.rs  window_sdl.rs
src/resources/: shader.frag  shader.vert  text.frag
