[package]
name = "tetra"
description = "A simple 2D game framework written in Rust"
version = "0.3.6"
edition = "2018"
authors = ["Joe Clay <27cupsofcoffee@gmail.com>"]
license = "MIT"
repository = "https://github.com/17cupsofcoffee/tetra"
documentation = "https://docs.rs/tetra"
readme = "README.md"
keywords = ["game", "engine", "framework", "gamedev"]
categories = ["game-engines"]

[features]
sdl2_bundled = ["sdl2/bundled"]
sdl2_static_link = ["sdl2/static-link"]
serde_support = ["serde", "vek/serde"]

[dependencies]
sdl2 = "0.34.0"
rodio = "0.11.0"
glow = "0.4.0"
image = "0.23.1"
vek = { version = "0.11.0", default-features = false }
hashbrown = "0.8.0"
serde = { version = "1.0.104", optional = true } 
ab_glyph = "0.2.2"
unicode-normalization = "0.1.12"

[dev-dependencies]
rand = "0.7.3"
