[package]
name = "tetra"
description = "A simple 2D game framework written in Rust"
version = "0.6.6"
edition = "2018"
authors = ["Joe Clay <27cupsofcoffee@gmail.com>"]
license = "MIT"
repository = "https://github.com/17cupsofcoffee/tetra"
documentation = "https://docs.rs/tetra"
readme = "README.md"
keywords = ["game", "engine", "framework", "gamedev"]
categories = ["game-engines"]

[dependencies]
sdl2 = "0.35.0"
rodio = { version = "0.14.0", optional = true, default-features = false }
glow = "0.11.0"
image = { version = "0.23.12", default-features = false }
vek = { version = "0.13.1", default-features = false }
hashbrown = "0.11.0"
serde = { version = "1.0.104", optional = true } 
ab_glyph = { version = "0.2.2", optional = true }
xi-unicode = "0.3.0"
bytemuck = "1.5.0"
num-traits = "0.2.14"
lyon_tessellation = "0.17.4"

[dev-dependencies]
rand = "0.8.0"
anyhow = "1.0.33"
legion = "0.4.0"

[features]
default = [
    "audio",
    "audio_mp3",
    "audio_vorbis",
    "audio_wav",
    "font_ttf",
    "texture_png",
    "texture_jpeg",
    "texture_gif",
    "texture_bmp",
]

# Enables the `tetra::audio` API. This feature can be disabled if you want to use a different
# audio API in your game (e.g. FMod or WWise).
audio = ["rodio"]

# Enables support for audio formats.
audio_flac = ["audio", "rodio/flac"]
audio_mp3 = ["audio", "rodio/mp3"]
audio_vorbis = ["audio", "rodio/vorbis"]
audio_wav = ["audio", "rodio/wav"]

# Enables support for font formats.
font_ttf = ["ab_glyph"]

# Enables support for texture formats.
texture_png = ["image/png"]
texture_jpeg = ["image/jpeg", "image/jpeg_rayon"]
texture_gif = ["image/gif"]
texture_bmp = ["image/bmp"]
texture_ico = ["image/ico"]
texture_tiff = ["image/tiff"]
texture_webp = ["image/webp"]
texture_pnm = ["image/pnm"]
texture_dds = ["image/dds", "image/dxt"]
texture_tga = ["image/tga"]

# Enables support for serialization/deserialization via Serde.
serde_support = ["serde", "vek/serde"]

# Compiles SDL2 from source (see https://github.com/Rust-SDL2/rust-sdl2#bundled-feature).
sdl2_bundled = ["sdl2/bundled"]

# Links SDL2 statically (see https://hg.libsdl.org/SDL/file/default/docs/README-dynapi.md).
sdl2_static_link = ["sdl2/static-link"]
