[package]
name = "tetra"
description = "A simple 2D game framework written in Rust"
version = "0.9.0"
edition = "2021"
authors = ["Joe Clay <27cupsofcoffee@gmail.com>"]
license = "MIT"
repository = "https://github.com/17cupsofcoffee/tetra"
documentation = "https://docs.rs/tetra"
readme = "README.md"
keywords = ["game", "engine", "framework", "gamedev"]
categories = ["game-engines"]

[dependencies]
sdl3 = "0.15.1"
rodio = { version = "0.20.1", optional = true, default-features = false }
glow = "0.16.0"
image = { version = "0.25.0", default-features = false }
vek = { version = "0.17.0", default-features = false }
hashbrown = "0.16.0"
serde = { version = "1.0.104", optional = true } 
ab_glyph = { version = "0.2.2", optional = true }
xi-unicode = "0.3.0"
bytemuck = "1.5.0"
num-traits = "0.2.14"
lyon_tessellation = "1.0.7"
half = { version = "2.1.0", features = ["bytemuck"] }

[dev-dependencies]
rand = "0.9.1"
anyhow = "1.0.33"
hecs = "0.10.5"

[features]
default = [
    "audio",
    "audio_mp3",
    "audio_vorbis",
    "audio_wav",
    "font_ttf",
    "texture_png",
    "texture_jpeg",
    "texture_gif",
    "texture_bmp",
]

# Enables the `tetra::audio` API. This feature can be disabled if you want to use a different
# audio API in your game (e.g. FMod or WWise).
audio = ["rodio"]

# Enables support for audio formats.
audio_flac = ["audio", "rodio/flac"]
audio_mp3 = ["audio", "rodio/mp3"]
audio_vorbis = ["audio", "rodio/vorbis"]
audio_wav = ["audio", "rodio/wav"]

# Enables support for font formats.
font_ttf = ["ab_glyph"]

# Enables support for texture formats.
texture_png = ["image/png"]
texture_jpeg = ["image/jpeg"]
texture_gif = ["image/gif"]
texture_bmp = ["image/bmp"]
texture_ico = ["image/ico"]
texture_tiff = ["image/tiff"]
texture_webp = ["image/webp"]
texture_pnm = ["image/pnm"]
texture_dds = ["image/dds"]
texture_tga = ["image/tga"]

# Enables support for serialization/deserialization via Serde.
serde = ["dep:serde", "vek/serde"]

# Compiles SDL from source (see https://github.com/maia-s/sdl3-sys-rs/tree/main/sdl3-sys#usage).
sdl_build_from_source = ["sdl3/build-from-source"]

# Links SDL statically (see https://hg.libsdl.org/SDL/file/default/docs/README-dynapi.md).
sdl_static_link = ["sdl3/static-link"]
